# fof-quant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: broad_index.yaml  csi300.yaml  example.yaml  example_holdings.json
deploy/: README.md  fof-api.service  fof-web.service  fof.maxlv.net.nginx  site.nginx
docs/: PRD.md  ROADMAP.md  TODO.md
src/fof_quant/: __init__.py  backtest_broad_index.py  cli.py  config.py  env.py  pipeline.py  pipeline_broad_index.py  pipeline_inputs.py
tests/: test_attribution.py  test_backtest.py  test_broad_index_backtest.py  test_broad_index_report.py  test_cache_staleness.py  test_cli.py  test_config.py  test_data_cache.py  test_env.py  test_executor_cache_refresh.py  test_factor_calculators.py  test_factor_engine.py  test_llm_dispatch.py  test_pipeline.py  test_real_tushare_snapshot.py  test_rebalance.py  test_regime.py  test_regime_backtest.py  test_reports.py  test_schedule.py  test_scoring_allocation.py  test_secret_hygiene.py  test_sweep.py  test_tushare_provider.py  test_universe.py  test_web_registry.py  test_web_routes.py
web/: .env.example  .gitignore  README.md  auth.ts  eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
web/app/: RunListClient.tsx  globals.css  layout.tsx  manifest.ts  page.tsx
web/components/: AllocationTable.tsx  AutoRefresh.tsx  DeleteRunButton.tsx  DrawdownChart.tsx  MetricsTable.tsx  NavChart.tsx  PullToRefresh.tsx  ServiceWorkerRegistrar.tsx  StatusBadge.tsx  SweepHeatmap.tsx  ThemeToggle.tsx
web/lib/: api.ts  (+3 more)
(+59 files in other folders)
